Create first version based on PLAN_v1.md
fix some lint issues

fix worker

fix types

improve ai-sdk importing

simplify

extract schema

simplify even more

update postgres.js

fix issues

fix

add zod to fetch* tasks

simpolify hn fetch

fix types

fixed readme

compile migration

fix deno json

fix compare script missing env

fix compare script

improve output

imrpove output

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -31,7 +31,7 @@ shadow_port = 54320
 major_version = 17
 
 [db.pooler]
-enabled = false
+enabled = true
 # Port to use for the local connection pooler.
 port = 54329
 # Specifies when a server connection can be reused by other clients.
@@ -314,6 +314,12 @@ deno_version = 2
 
 # [edge_runtime.secrets]
 # secret_key = "env(SECRET_VALUE)"
+
+[functions.worker]
+enabled = true
+verify_jwt = false
+import_map = "./functions/deno.json"
+entrypoint = "./functions/worker/index.ts"
 
 [analytics]
 enabled = true
